--- a/01-getting-starter/package.json
+++ b/01-getting-starter/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
+    "dev": "docusaurus start",
     "build": "docusaurus build",
-    "github-pages": "cross-env BASE_URL='/docusaurus-examples/' npm run build",
+    "github-pages": "cross-env BASE_URL='/Comprehensive-system/' npm run build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -19,15 +20,20 @@
     "@docusaurus/core": "2.0.0-beta.21",
     "@docusaurus/preset-classic": "2.0.0-beta.21",
     "@mdx-js/react": "1.6.22",
+    "@react-spring/web": "9.7.5",
     "clsx": "1.1.1",
     "prism-react-renderer": "1.3.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "4.12.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-beta.21",
     "@tsconfig/docusaurus": "1.0.5",
+    "autoprefixer": "10.4.22",
     "cross-env": "7.0.3",
+    "postcss": "8.5.6",
+    "tailwindcss": "3.4.18",
     "typescript": "4.6.4"
   },
   "browserslist": {
